--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -672,3 +672,25 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
         border-radius: 47% 47% 47% 47%;
     }
 }
+
+.bb_HUD{
+    width:0.1%;
+    height:0.1%;
+}
+
+.onBoard{
+    width: 26000%;
+    height: 38000%;
+    z-index: 10;
+    position: relative;
+    border-radius: 50%;
+}
+.baim.onBoard{top:89000%;left:-17000%;background-color: goldenrod;}
+.bdamage.onBoard{top:80000%;left:7000%;background-color: red;}
+.bdodge.onBoard{top:60000%;left:37000%;background-color: blue;}
+.bprotection.onBoard{top:4000%;left:67000%;background-color: grey;}
+.bspeed.onBoard{top:-63000%;left:94000%;background-color: green;}
+.onBoard.blighted{box-shadow:0 0 1vw rgb(41, 0, 0),0 0 1.25vw rgb(41, 0, 0),0 0 1.5vw rgb(41, 0, 0),0 0 1.75vw rgb(41, 0, 0),
+    0 0 1vw rgba(59, 54, 54, 0.4) inset;}
+.onBoard.booned{box-shadow: 0 0 1vw rgb(160, 241, 38),0 0 1.25vw rgb(160, 241, 38),0 0 1.5vw rgb(160, 241, 38),0 0 1.75vw rgb(160, 241, 38),
+    0 0 1vw rgba(246, 250, 241, 0.4) inset;}
