--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -314,9 +314,11 @@ body{
 }
 .smallCard:nth-child(odd){
     margin-left: 1.5vw;
+    p{margin-left: 1.5vw;}
 }
 .smallCard:nth-child(even){
     margin-left:-1.39vw;
+    p{margin-left:-1.39vw;}
 }
 .puller{
     background-color:darkslategrey;
@@ -674,23 +676,137 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
 }
 
 .bb_HUD{
-    width:0.1%;
-    height:0.1%;
+    width: 133%;
+    height: 1%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    left: -17%;
+    top: 91%;
 }
 
 .onBoard{
-    width: 26000%;
-    height: 38000%;
+    width: 37%;
+    height: 4500%;
     z-index: 10;
     position: relative;
     border-radius: 50%;
+    left:-1%;
 }
-.baim.onBoard{top:89000%;left:-17000%;background-color: goldenrod;}
-.bdamage.onBoard{top:80000%;left:7000%;background-color: red;}
-.bdodge.onBoard{top:60000%;left:37000%;background-color: blue;}
-.bprotection.onBoard{top:4000%;left:67000%;background-color: grey;}
-.bspeed.onBoard{top:-63000%;left:94000%;background-color: green;}
+.baim.onBoard{top:0%;left:0%;background-color: goldenrod;}
+.bdamage.onBoard{top:2000%;left:0%;background-color: red;}
+.bdodge.onBoard{top:2500%;left:0%;background-color: blue;}
+.bprotection.onBoard{top:2000%;left:0%;background-color: grey;}
+.bspeed.onBoard{top:0%;left:0%;background-color: green;}
 .onBoard.blighted{box-shadow:0 0 1vw rgb(41, 0, 0),0 0 1.25vw rgb(41, 0, 0),0 0 1.5vw rgb(41, 0, 0),0 0 1.75vw rgb(41, 0, 0),
     0 0 1vw rgba(59, 54, 54, 0.4) inset;}
 .onBoard.booned{box-shadow: 0 0 1vw rgb(160, 241, 38),0 0 1.25vw rgb(160, 241, 38),0 0 1.5vw rgb(160, 241, 38),0 0 1.75vw rgb(160, 241, 38),
     0 0 1vw rgba(246, 250, 241, 0.4) inset;}
+.baim.onBoard.booned{
+    background-image: url("../img/aimBoon.svg"); 
+    background-size: contain;
+}
+.bdamage.onBoard.booned{
+    background-image: url("../img/damageBoon.svg"); 
+    background-size: contain;
+}
+.bdodge.onBoard.booned{
+    background-image: url("../img/dodgeBoon.svg"); 
+    background-size: contain;
+}
+.bprotection.onBoard.booned{
+    background-image: url("../img/protectionBoon.svg"); 
+    background-size: contain;
+}
+.bspeed.onBoard.booned{
+    background-image: url("../img/speedBoon.svg"); 
+    background-size: contain;
+}
+.baim.onBoard.blighted{
+    background-image: url("../img/aimBlight.svg"); 
+    background-size: contain;
+}
+.bdamage.onBoard.blighted{
+    background-image: url("../img/damageBlight.svg"); 
+    background-size: contain;
+}
+.bdodge.onBoard.blighted{
+    background-image: url("../img/dodgeBlight.svg"); 
+    background-size: contain;
+}
+.bprotection.onBoard.blighted{
+    background-image: url("../img/protectionBlight.svg"); 
+    background-size: contain;
+}
+.bspeed.onBoard.blighted{
+    background-image: url("../img/speedBlight.svg"); 
+    background-size: contain;
+}
+
+.gameCard_num{
+    font-family: $coinFont2;
+    font-size:212%!important;
+    position:relative;
+    top:-21%;
+    width: 100%;
+    height:161%;
+    @include instaFlex;
+}
+.gameCard_num.normal{
+    text-shadow: 0 0 1px rgb(105, 100, 98), 0 0 2px rgb(131, 124, 122), 0 0 3px rgb(117, 113, 111);
+}
+.gameCard_num.booned{
+    text-shadow: 0 0 1px rgb(0, 204, 255), 0 0 2px rgb(0, 255, 191), 0 0 3px rgb(0, 255, 179);
+    color:rgb(0, 0, 31);
+}
+.gameCard_num.blighted{
+    text-shadow: 0 0 1px rgb(114, 33, 1), 0 0 2px rgb(117, 34, 1), 0 0 3px rgb(155, 1, 134);
+    color:rgb(39, 2, 2);
+}
+.roster_abil_desc{
+    .small_icon{
+        width:11%;
+        margin-top:-7%;
+    }
+}
+@mixin bbsmin {
+            width: 62%;
+            position: relative;
+            top: -16%;
+            margin: -50% 0;
+        }
+.right{
+    .smallCard:nth-child(odd){
+        .BB_s{
+            left: -31%;
+            width: 97%;
+            position: relative;
+            top: -24%;
+            margin: -72% 0;
+        }
+    }
+    .smallCard:nth-child(even){
+        .BB_s{
+            @include bbsmin;
+            left: 70%;
+        }
+    }
+}
+.left{
+    .smallCard:nth-child(odd){
+        .BB_s{
+            width: 97%;
+            position: relative;
+            top: -24%;
+            margin: -72% 0;
+            left: -31%;
+        }
+    }
+    .smallCard:nth-child(even){
+        .BB_s{
+            @include bbsmin;
+            left: 70%;
+        }
+    }
+}
