--- a/client/styles/gameCard.scss
+++ b/client/styles/gameCard.scss
@@ -285,7 +285,8 @@ $white: white;
         align-content: center;
         width: 131%;
         height: 100%;
-        left: 0;
+        left: 42%;
+        top:-46%;
         text-align: center;
         z-index:21;
         @include instaFlex; 
@@ -399,3 +400,40 @@ $white: white;
     top: 0;
 }
 .endTask{background-image:url('../img/minus.svg');}
+#jewelsCont{width:0;height:0;margin:0;padding:0;}
+@mixin squeezer{
+    margin-bottom:-8%;
+}
+.treasureBox{
+    @include instaFlex;
+    flex-wrap:wrap;
+    width: 9vh;
+    height: 9vh;
+    background: rgb(66,25,5);
+    background: radial-gradient(circle, rgba(66,25,5,0.8519608527004552) 0%, rgba(57,30,3,0.767927239255077) 41%, rgba(20,157,175,0.8967787798713235) 55%, rgba(56,8,2,0.8743698162858894) 67%, rgba(56,2,2,0.7539216370141807) 90%, rgba(70,37,3,0.87156869583771) 100%); 
+    border-radius:45%;
+    box-shadow: 0 0 1px 0 black, 0 0 1px 0 black inset;
+    img{
+        width:4.05vh;
+        @include squeezer;
+    }
+    .gem1{
+        margin-right:-5%;
+    }
+    .gem2{
+        margin-left:-5%;
+    }
+    .gem3{
+        margin-left:-5%;
+        margin-right:10%;
+    }
+    .gem4{
+        margin-left:10%;
+        margin-right:-5%;
+    }
+    .gem5{
+        margin-top:-14%
+    }
+}
+
+.nope{filter:brightness(.3)}
